Centered background image, fixed footer spacing

--- a/fle_site/static/css/styles.less
+++ b/fle_site/static/css/styles.less
@@ -66,8 +66,8 @@ a {
 
 .main-image {
     h1, p {
-        position: relative;
-        top: 120px;
+        position: relative;  
+        top: 350/3px;
     }
     h1 {
         text-transform: uppercase;
@@ -82,6 +82,7 @@ a {
     position: relative;
     height: 350px;
     background: url("../img/burma-kids-blur.jpg") fixed; 
+    background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -125,7 +126,7 @@ a {
   .horizontal-list;
   font-size: 45px;
   position: relative;
-  padding: 0 0 -30px 0;
+  padding-left: 0px;
   margin: 0px;
   @media (min-width: 768px) {
       top: -40px;
